// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkPkgScripts throws if the binary name is defined in script 1`] = `
"
WARN \`lint-staged\` no longer supports running scripts defined in package.json.

The same behavior can be achieved by changing the command to any of the following:
  - \`npm run lint -- --fix\`
  - \`eslint . --fix\`"
`;

exports[`checkPkgScripts throws if the cmd is defined in script 1`] = `
"
WARN \`lint-staged\` no longer supports running scripts defined in package.json.

The same behavior can be achieved by changing the command to any of the following:
  - \`npm run lint -- \`
  - \`eslint . \`"
`;
